rns-lang/src/lexer/snapshots/identifiers-keyword_as_part_of_identifier.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
publicStatic staticPublic
----- TOKENS -----
KIND                        | SPAN    | LSP       | TEXT
----                        | ----    | ---       | ----
Identifier("publicStatic")  | 0..12   | 0:0..12   | publicStatic
Identifier("staticPublic")  | 13..25  | 0:13..25  | staticPublic
Eof                         | 25..25  | 0:25..25  |
