rns-lang/src/lexer/snapshots/identifiers-keywords_and_identifiers.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
public myVariable static someMethod final
----- TOKENS -----
KIND                      | SPAN    | TEXT
----                      | ----    | ----
AccessFlag(Public)        | 0..6    | public
Identifier("myVariable")  | 7..17   | myVariable
AccessFlag(Static)        | 18..24  | static
Identifier("someMethod")  | 25..35  | someMethod
AccessFlag(Final)         | 36..41  | final
Eof                       | 41..41  |
