rns-lang/src/lexer/snapshots/identifiers-method_with_space.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
.method public static main ([Ljava/lang/String;)V
----- TOKENS -----
KIND                                        | SPAN    | TEXT
----                                        | ----    | ----
DotMethod                                   | 0..7    | .method
Public                                      | 8..14   | public
Static                                      | 15..21  | static
Identifier("main")                          | 22..26  | main
MethodDescriptor("([Ljava/lang/String;)V")  | 27..49  | ([Ljava/lang/String;)V
Eof                                         | 49..49  |
