rns-lang/src/lexer/snapshots/init_clinit-clinit_in_method.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
.method static <clinit> ()V
----- TOKENS -----
KIND                    | SPAN    | TEXT
----                    | ----    | ----
DotMethod               | 0..7    | .method
AccessFlag(Static)      | 8..14   | static
Identifier("<clinit>")  | 15..23  | <clinit>
Identifier("()V")       | 24..27  | ()V
Newline                 | 27..28  | \n
Eof                     | 28..28  |
