rns-lang/src/lexer/snapshots/init_clinit-clinit_with_descriptor.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
<clinit> ()V
----- TOKENS -----
KIND                    | SPAN    | TEXT
----                    | ----    | ----
Identifier("<clinit>")  | 0..8    | <clinit>
Identifier("()V")       | 9..12   | ()V
Newline                 | 12..13  | \n
Eof                     | 13..13  |
