rns-lang/src/lexer/snapshots/init_clinit-init_in_method.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
.method public <init> ()V
----- TOKENS -----
KIND                  | SPAN    | TEXT
----                  | ----    | ----
DotMethod             | 0..7    | .method
AccessFlag(Public)    | 8..14   | public
Identifier("<init>")  | 15..21  | <init>
Identifier("()V")     | 22..25  | ()V
Newline               | 25..26  | \n
Eof                   | 26..26  |
