rns-lang/src/lexer/snapshots/init_clinit-init_with_descriptor.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
<init> ()V
----- TOKENS -----
KIND                  | SPAN    | TEXT
----                  | ----    | ----
Identifier("<init>")  | 0..6    | <init>
Identifier("()V")     | 7..10   | ()V
Newline               | 10..11  | \n
Eof                   | 11..11  |
